# spacedrive-painful-bug

./: .prettierrc.js  Cargo.toml  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.json
apps/desktop/: package.json  tsconfig.json  vite.config.ts
apps/desktop/src/: App.tsx  commands.ts  demo.tsx  demoData.json  index.tsx
apps/desktop/src-tauri/: Cargo.toml
apps/desktop/src-tauri/src/: main.rs
interface/: ErrorFallback.tsx  index.tsx  package.json  tsconfig.json
interface/app/: index.tsx
interface/app/$libraryId/: index.tsx
interface/app/$libraryId/Layout/: index.tsx
interface/app/onboarding/: Layout.tsx  alpha.tsx  index.tsx
interface/util/: Platform.tsx
