[package]
name = "sd-desktop"
version = "0.1.0"
description = "The universal file manager."
authors = ["Spacedrive Technology Inc."]
default-run = "sd-desktop"
license = { workspace = true }
repository = { workspace = true }
edition = { workspace = true }

[dependencies]
tauri = { version = "=1.3.0", features = ["devtools", "dialog-all", "linux-protocol-headers", "macos-private-api", "os-all", "path-all", "protocol-all", "shell-all", "window-all"] }
tokio = { version = "1.32.0", features = ["sync", "macros", "time"] }

[build-dependencies]
tauri-build = { version = "1.4.0", features = [] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
updater = ["tauri/updater"]
